# sms

./: dict.c  meson.build  message.c  message.h  ogs-diameter-sgd.h
